Fix input overflow issue on Safari
In Safari at 320px the input element was a bit too wide, and made
things look strange.

--- a/app/assets/stylesheets/base/_forms.scss
+++ b/app/assets/stylesheets/base/_forms.scss
@@ -13,6 +13,7 @@ input[name="slider"] {
   font-size: 16px;
   border: 1px solid $color-grey-secondary;
   border-radius: 4px;
+  width: 80%;
 
   // outlines
   &:focus {
